--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,8 @@ edition = "2021"
 
 [dependencies]
 derive_more = "0.99.17"
+ed25519-dalek = "1.0.1"
 memmap2 = "0.5.3"
+smallvec = "1.9.0"
 thiserror = "1.0.31"
+zstd = "0.11.2"
